--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: © 2024 Matija Šuklje <https://matija.suklje.name>
+# SPDX-License-Identifier: CC0-1.0
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
